--- a/style.css
+++ b/style.css
@@ -2,6 +2,105 @@
     padding: 0;
     margin: 0;
     font-family: 'Raleway', sans-serif;
+    text-decoration: none;
+    list-style-type: none;
 }
 
-/* ****************************************************************** */
+/* **********Body********** */
+
+/* **********Header********** */
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 50px;
+    margin-left: 50px;
+}
+
+header img{
+    cursor: pointer;
+    width: 110px;
+    height: 60px;
+}
+
+.navheader{
+    cursor: pointer;
+    display: flex;
+}
+
+.navheader1{
+    border-top: 2px solid;
+    border-top-color: #0065FC;
+    margin-right: 70px;
+    color: #0065FC;
+    font-weight: 500;
+}
+
+.navheader1 a{
+    border-top: 2px solid;
+    border-top-color: #0065FC;
+    margin-right: 70px;
+    color: #0065FC;
+    font-weight: 500;  
+}
+
+.navheader1:visited{
+    color:#0065FC;
+}
+.navheader1 a:visited{
+    color:#0065FC;
+}
+
+.navheader2{
+    margin-right: 70px;
+    color: black;
+    font-weight: 500;
+}
+
+.navheader2 a{
+    margin-right: 70px;
+    color: black;
+    font-weight: 500;
+}
+
+.navheader2 a:visited{
+    color: black;
+}
+
+.navheader2:visited{
+    color: black;
+}
+
+.navheader3{
+    margin-right: 75px;
+    color: #0065FC;
+    font-weight: bold;
+}
+
+.navheader3 a{
+    margin-right: 75px;
+    color: #0065FC;
+    font-weight: bold;
+}
+
+.navheader3 a:visited{
+    color:#0065FC;
+}
+
+.navheader3:visited{
+    color:#0065FC;
+}
+
+
+/* **********Header********** */
+/* **********Main********** */
+main{
+    margin-right: 50px;
+    margin-left: 50px;
+}
+/* **********Main********** */
+/* **********Footer********** */
+
+/* **********Footer********** */
+
+/* **********Body********** */
