--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ header{
 
 header img{
     cursor: pointer;
-    width: 110px;
-    height: 60px;
+    width: 95px;
+    height: 45px;
 }
 
 .navheader{
@@ -32,14 +32,12 @@ header img{
     border-top: 2px solid;
     border-top-color: #0065FC;
     margin-right: 70px;
+    padding: 15px 0;
     color: #0065FC;
     font-weight: 500;
 }
 
 .navheader1 a{
-    border-top: 2px solid;
-    border-top-color: #0065FC;
-    margin-right: 70px;
     color: #0065FC;
     font-weight: 500;  
 }
@@ -55,10 +53,11 @@ header img{
     margin-right: 70px;
     color: black;
     font-weight: 500;
+    padding: 1rem 0;
 }
 
 .navheader2 a{
-    margin-right: 70px;
+    
     color: black;
     font-weight: 500;
 }
@@ -75,6 +74,7 @@ header img{
     margin-right: 75px;
     color: #0065FC;
     font-weight: bold;
+    padding: 1rem 0;
 }
 
 .navheader3 a{
@@ -90,14 +90,23 @@ header img{
 .navheader3:visited{
     color:#0065FC;
 }
-
-
 /* **********Header********** */
 /* **********Main********** */
 main{
+    padding-top: 50px;
     margin-right: 50px;
     margin-left: 50px;
 }
+
+/* **********section recherche********** */
+
+/* **********section recherche********** */
+/* **********section hébergements********** */
+
+/* **********section hébergements********** */
+/* **********section activités********** */
+
+/* **********section activités********** */
 /* **********Main********** */
 /* **********Footer********** */
 
