--- a/style.css
+++ b/style.css
@@ -155,29 +155,121 @@ form button{
     align-items: center;
 }
 
+.filtre h3{
+    margin-right: 30px;
+    font-size: 17px;
+}
+
 .filtre div{
     display: flex;
     align-items: center;
     font-size: 18px;
-    border:solid;
+    border: solid 2px #F2F2F2;
+    border-bottom-right-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-top-left-radius: 25px;
+    padding-right: 15px;
+    margin-right: 25px;
+    font-weight: bold;
 }
 
 .filtre i{
     background-color: #DEEBFF;
-    border-radius: 100%;
-    min-height: 40px;
-    min-width: 40px;
+    border-radius: 25px;
+    min-height: 50px;
+    min-width: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
     color: #0065FC;
+    margin: -2px;
+    margin-right: 10px;
 }
 
 .info{
+    display: flex;
+    align-items: center;
     padding-top: 20px;
+    margin-bottom: 40px;
+}
+
+.logoinfo{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 30px;
+    min-width: 30px;
+    color: #0065FC;
+    border: solid 2px #F2F2F2;
+    border-radius: 25px;
+    margin-right: 10px;
+
+}
+
+.info p{
+    font-size: 15px;
 }
 /* **********section recherche********** */
 /* **********section hébergements********** */
+.hébergements{
+    
+    padding-top:40px;
+    padding-left: 40px;
+    padding-right: 40px;
+    border-radius: 25px;
+    background-color: #F2F2F2;
+    height: 625px;
+    width: 880px;
+}
+
+.hébergementsh2{
+    display: flex;
+    padding-bottom: 25px;
+    font-size: 20px;
+}
+
+.hébergementsarticle{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    row-gap: 30px;
+}
+
+.hébergementsarticle h3{
+    margin-bottom: 6px;
+}
+
+.hébergementsarticle p{
+    margin-bottom: 3px;
+}
+
+.hébergementsarticle i{
+    color: #0065FC;
+}
+
+.hébergements div article{
+    height: 200px;
+    width: 235px;
+    border:solid 5px white;
+    border-radius: 25px;
+    background-color: white;
+
+}
+
+.hébergements div article img{
+    height: 115px;
+    width: 235px;
+    border-bottom: solid 5px white;
+    border-right: solid 5px white;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+
+aside{
+    border: solid;
+    background-color: #F2F2F2;
+}
 
 /* **********section hébergements********** */
 /* **********section activités********** */
