--- a/style.css
+++ b/style.css
@@ -213,18 +213,28 @@ form button{
 /* **********section recherche********** */
 /* **********section hébergements********** */
 .hébergements{
-    
-    padding-top:40px;
-    padding-left: 40px;
-    padding-right: 40px;
-    border-radius: 25px;
-    background-color: #F2F2F2;
+    display: flex;
+}
+
+.boite1{
     height: 625px;
     width: 880px;
+    background-color: #F2F2F2;
+    padding-top: 40px;
+    padding-left: 40px; 
+    border-radius: 25px;
+    margin-right: 40px;
+}
+
+.boite1 a{
+    font-weight: bold;
+}
+
+.boite1 a:visited{
+    color: black;
 }
 
 .hébergementsh2{
-    display: flex;
     padding-bottom: 25px;
     font-size: 20px;
 }
@@ -248,16 +258,16 @@ form button{
     color: #0065FC;
 }
 
-.hébergements div article{
+.hébergementsarticle article{
     height: 200px;
     width: 235px;
     border:solid 5px white;
     border-radius: 25px;
     background-color: white;
+    box-shadow: 1px 1px 12px #555;
 
 }
-
-.hébergements div article img{
+.hébergementsarticle article img{
     height: 115px;
     width: 235px;
     border-bottom: solid 5px white;
@@ -266,13 +276,176 @@ form button{
     border-top-right-radius: 25px;
 }
 
-aside{
-    border: solid;
+.populaires{
     background-color: #F2F2F2;
+    padding-top: 40px;
+    padding-left: 40px; 
+    border-radius: 25px;
+    padding-right: 40px;
 }
+
+.popuh2{
+    display: flex;
+    font-size: 20px;
+    margin-bottom: 25px;
+}
+
+.logopopu{
+    font-size: 30px;
+    padding-left: 118px;
+}
+
+aside article{
+    display: flex;
+    border: solid 5px white;
+    height: 145px;
+    width: 345px;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    background-color: white;
+    margin-bottom: 30px;
+    box-shadow: 1px 1px 12px #555;
+}
+
+aside i{
+    color: #0065FC;
+}
+
+aside article img{
+    height: 145px;
+    width: 125px;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+}
+
+.popuarticle{
+    flex-direction: column;
+}
+
+.popuarticle h3{
+    margin-bottom: 15px;
+}
+
+.popuetoile{
+    margin-top: 65px;
+}
+
+.popuetoile2{
+    margin-top: 40px;
+}
+
+.popuetoile3{
+    margin-top: 65px;
+}
+
 
 /* **********section hébergements********** */
 /* **********section activités********** */
+.activités{
+    margin-top: 65px;
+}
+
+.boite2{
+
+}
+
+.boite2 h2{
+    padding-bottom: 30px;
+}
+
+.activitésarticle{
+    display: flex;
+    column-gap: 30px;
+    row-gap: 30px
+
+}
+
+.activitésarticle h3{
+    margin-top: 25px;
+    margin-left: 20px;
+    padding-bottom: 20px;
+}
+
+.activitésarticle1 article{
+    border-radius: 25px;
+    background-color: white;
+    box-shadow: 1px 1px 12px #555;
+    order: 1;
+}
+.activitésarticle1 img{
+    height: 390px;
+    width: 300px;
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
+}
+.activitésarticle2 article{
+    border-radius: 25px;
+    background-color: white;
+    box-shadow: 1px 1px 12px #555;
+    margin-bottom: 30px;
+}
+
+.activitésarticle2 img{
+    height: 180px; 
+    width: 300px;
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
+}
+
+.activitésarticle3 article{
+    border-radius: 25px;
+    background-color: white;
+    box-shadow: 1px 1px 12px #555;
+}
+
+.activitésarticle3 img{
+    height: 110px; 
+    width: 300px;
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
+}
+
+.activitésarticle4 article{
+    border-radius: 25px;
+    background-color: white;
+    box-shadow: 1px 1px 12px #555;
+}
+
+.activitésarticle4 img{
+    height: 390px; 
+    width: 300px;
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
+}
+
+.activitésarticle5 article{
+    border-radius: 25px;
+    background-color: white;
+    box-shadow: 1px 1px 12px #555;
+    margin-bottom: 30px;
+}
+
+.activitésarticle5 img{
+    height: 140px; 
+    width: 300px;
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
+}
+
+.activitésarticle6 article{
+    border-radius: 25px;
+    background-color: white;
+    box-shadow: 1px 1px 12px #555;
+}
+
+.activitésarticle6 img{
+    height: 150px; 
+    width: 300px;
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
+}
 
 /* **********section activités********** */
 /* **********Main********** */
