--- a/style.css
+++ b/style.css
@@ -358,8 +358,8 @@ aside article img{
 .activitésarticle{
     display: flex;
     column-gap: 30px;
+    margin-bottom: 60px;
     row-gap: 30px
-
 }
 
 .activitésarticle h3{
@@ -446,10 +446,55 @@ aside article img{
     border-top-right-radius: 25px;
     border-top-left-radius: 25px;
 }
-
 /* **********section activités********** */
+
 /* **********Main********** */
 /* **********Footer********** */
+.footer{
+    background-color: #F2F2F2;
+    display: flex;
+}
+
+.footer li{
+    margin-bottom: 20px;
+}
+
+.f1{
+    margin-top:45px;
+    margin-left: 50px;
+    margin-right: 30%;
+}
+
+.f2{
+    margin-top:45px;
+    margin-right: 30%;
+}
+
+.f3{
+    margin-top:45px;
+}
+
+.f1 h3{
+    margin-bottom: 20px;
+}
+.f2 h3{
+    margin-bottom: 20px;
+}
+.f3 h3{
+    margin-bottom: 20px;
+}
+
+.f1 a:visited{
+    color: black;
+}
+
+.f2 a:visited{
+    color: black;
+}
+
+.f3 a:visited{
+    color: black;
+}
 
 /* **********Footer********** */
 
