--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     list-style-type: none;
 }
 
+html{
+    overflow-x: hidden;
+}
+
 /* **********Body********** */
 
 /* **********Header********** */
@@ -14,8 +18,8 @@ header{
     justify-content: space-between;
     align-items: center;
     font-size: 15px;
-    margin-right: 50px;
-    margin-left: 50px;
+    margin-right: 10%;
+    margin-left: 10%;
 }
 
 header img{
@@ -25,54 +29,59 @@ header img{
 }
 
 .navheader{
-    cursor: pointer;
+    width: 30rem;
+    margin-bottom: 16px;
+    height: 100%;
     display: flex;
 }
 
 .navheader1{
-    border-top: 2px solid;
-    border-top-color: #0065FC;
     margin-right: 70px;
     padding: 15px 0;
-    color: #0065FC;
     font-weight: 500;
+    color: black;
 }
 
-.navheader1 a{
+#héberg{
+    border-top: 2px solid;
+    border-top-color: #0065FC;
+    color: #0065FC;
+}
+
+#héberg a{
     color: #0065FC;
     font-weight: 500;  
 }
 
-.navheader1:visited{
+#héberg:visited{
     color:#0065FC;
 }
-.navheader1 a:visited{
+#héberg a:visited{
     color:#0065FC;
 }
 
-.navheader2{
+.navheader1{
     margin-right: 70px;
     color: black;
     font-weight: 500;
     padding: 1rem 0;
 }
 
-.navheader2 a{
+.navheader1 a{
     
     color: black;
     font-weight: 500;
 }
 
-.navheader2 a:visited{
+.navheader1 a:visited{
     color: black;
 }
 
-.navheader2:visited{
+.navheader1:visited{
     color: black;
 }
 
 .navheader3{
-    margin-right: 75px;
     color: #0065FC;
     font-weight: bold;
     padding: 1rem 0;
@@ -91,14 +100,58 @@ header img{
 .navheader3:visited{
     color:#0065FC;
 }
+@media all and (max-width: 1024px){
+    .header{
+        display: flex;
+        height: auto;
+        align-items: flex-start;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .navheader{
+    width: 100%;
+    }
+
+    .header nav{
+        position: absolute;
+    }
+    
+    .header nav ul{
+    align-items: flex-start;
+    justify-content: flex-end;
+    flex-wrap: wrap-reverse;
+    width: 375px;
+    height: 100px;
+    margin-left: -44px;
+    }
+    .navheader1{
+        width: 25%;
+        justify-content: center;
+    }
+    #héberg{
+        border-top: none;
+        border-bottom: 2px solid;
+        border-bottom-color: #0065FC;
+    }    
+    .navheader3{
+        width: 50%;
+        align-items: center;
+        justify-content: flex-end;
+    }
+}
 /* **********Header********** */
 /* **********Main********** */
 main{
     padding-top: 50px;
-    margin-right: 50px;
-    margin-left: 50px;
+    margin-right: 10%;
+    margin-left: 10%;
 }
 
+@media all and (max-width: 1024px){
+    .main{
+        width: 375px;
+    }
+}
 /* **********section recherche********** */
 .titrerecherche h1{
     font-size: 20px;
@@ -135,6 +188,11 @@ main{
     border: none;
     border-bottom: solid #F2F2F2;
     border-top: solid #F2F2F2;
+    outline:none;    
+}
+
+.zonerechercher:focus{
+    outline:none;
 }
 
 form button{
@@ -160,23 +218,59 @@ form button{
     font-size: 17px;
 }
 
+.l1{
+        border: solid 2px #F2F2F2;
+        border-bottom-right-radius: 25px;
+        border-top-right-radius: 25px;
+        border-bottom-left-radius: 25px;
+        border-top-left-radius: 25px;
+        cursor: pointer;
+}
+.l2{
+        border: solid 2px #F2F2F2;
+        border-bottom-right-radius: 25px;
+        border-top-right-radius: 25px;
+        border-bottom-left-radius: 25px;
+        border-top-left-radius: 25px;
+        cursor: pointer;
+}
+.l3{
+        border: solid 2px #F2F2F2;
+        border-bottom-right-radius: 25px;
+        border-top-right-radius: 25px;
+        border-bottom-left-radius: 25px;
+        border-top-left-radius: 25px;
+        cursor: pointer;
+}
+.l4{
+        border: solid 2px #F2F2F2;
+        border-bottom-right-radius: 25px;
+        border-top-right-radius: 25px;
+        border-bottom-left-radius: 25px;
+        border-top-left-radius: 25px;
+        cursor: pointer;
+}
+
+.l1:hover{
+    background-color: #0065FC;
+}
+.l2:hover{
+    background-color: #0065FC;
+}
+.l3:hover{
+    background-color: #0065FC;
+}
+.l4:hover{
+    background-color: #0065FC;
+}
+
 .filtre div{
     display: flex;
     align-items: center;
     font-size: 18px;
-    border: solid 2px #F2F2F2;
-    border-bottom-right-radius: 25px;
-    border-top-right-radius: 25px;
-    border-bottom-left-radius: 25px;
-    border-top-left-radius: 25px;
     padding-right: 15px;
     margin-right: 25px;
     font-weight: bold;
-    cursor: pointer;
-}
-
-.filtre div:hover{
-    background-color: #0065FC;
 }
 
 .filtre i{
@@ -215,20 +309,65 @@ form button{
 .info p{
     font-size: 15px;
 }
+
+@media all and (max-width: 1024px){
+    .recherche{
+        width: 100%;
+        margin-top: 20px;
+    }
+    
+    .titrerecherche{
+        width: 290px;
+    }
+    .filtre{
+        flex-wrap: wrap;
+        margin-bottom: 35px;
+    }
+
+    .t1{
+        margin-bottom: 20px;
+    }
+
+    .filtrelogo{
+        flex-wrap: wrap;
+    }
+    .l1{
+        margin-bottom: 10px;
+        order: 1;
+    }
+    .l2{
+        order: 4;
+    }
+    .l3{
+        margin-bottom: 10px;
+        order: 2;
+    }
+    .l4{
+        margin-bottom: 10px;
+        order: 3;
+    }
+    .info{
+        width: 330px;
+    }
+}
+
 /* **********section recherche********** */
 /* **********section hébergements********** */
 .hébergements{
     display: flex;
+    width: 100%;
+    justify-content: space-around;
 }
 
 .boite1{
-    height: 625px;
-    width: 880px;
+    width: 100%;
+    max-width: 880px;
     background-color: #F2F2F2;
     padding-top: 40px;
     padding-left: 40px; 
     border-radius: 25px;
     margin-right: 40px;
+    margin-bottom: 15px;
 }
 
 .afficher{
@@ -283,10 +422,13 @@ form button{
 
 .populaires{
     background-color: #F2F2F2;
+    width: 100%;
+    max-width: 420px;
     padding-top: 40px;
     padding-left: 40px; 
     border-radius: 25px;
     padding-right: 40px;
+    margin-bottom: 15px;
 }
 
 .popuh2{
@@ -348,10 +490,36 @@ aside article img{
 .popuetoile3{
     margin-top: 65px;
 }
+
+@media all and (max-width: 1024px)
+{
+    .hébergements{
+        flex-direction: column;
+    }
+    
+    .boite1{
+        background-color: white;
+        order: 2;
+        height: 1395px;
+        padding-bottom: 130px;
+        max-width: 375px;
+    }
+
+    .hébergementsarticle{
+        flex-direction: column;
+    }
+
+    .populaires{
+        order: 1;
+        min-width: 375px;
+        max-width: 375px;
+    }
+}
 /* **********section hébergements********** */
 /* **********section activités********** */
 .activités{
     margin-top: 65px;
+    width: 100%;
 }
 
 .boite2 h2{
@@ -360,7 +528,7 @@ aside article img{
 
 .activitésarticle{
     display: flex;
-    column-gap: 30px;
+    justify-content: space-around;
     margin-bottom: 60px;
     row-gap: 30px
 }
@@ -380,6 +548,8 @@ aside article img{
     background-color: white;
     box-shadow: 1px 1px 12px #555;
     order: 1;
+    min-width: 300px;
+    max-width: 300px;
 }
 .activitésarticle1 img{
     height: 390px;
@@ -392,6 +562,8 @@ aside article img{
     background-color: white;
     box-shadow: 1px 1px 12px #555;
     margin-bottom: 30px;
+    min-width: 300px;
+    max-width: 300px;
 }
 
 .activitésarticle2 img{
@@ -405,6 +577,8 @@ aside article img{
     border-radius: 25px;
     background-color: white;
     box-shadow: 1px 1px 12px #555;
+    min-width: 300px;
+    max-width: 300px;
 }
 
 .activitésarticle3 img{
@@ -418,6 +592,8 @@ aside article img{
     border-radius: 25px;
     background-color: white;
     box-shadow: 1px 1px 12px #555;
+    min-width: 300px;
+    max-width: 300px;
 }
 
 .activitésarticle4 img{
@@ -432,6 +608,8 @@ aside article img{
     background-color: white;
     box-shadow: 1px 1px 12px #555;
     margin-bottom: 30px;
+    min-width: 300px;
+    max-width: 300px;
 }
 
 .activitésarticle5 img{
@@ -445,6 +623,8 @@ aside article img{
     border-radius: 25px;
     background-color: white;
     box-shadow: 1px 1px 12px #555;
+    min-width: 300px;
+    max-width: 300px;
 }
 
 .activitésarticle6 img{
@@ -453,6 +633,19 @@ aside article img{
     border-top-right-radius: 25px;
     border-top-left-radius: 25px;
 }
+
+@media all and (max-width: 1024px){
+    .activitésarticle{
+        flex-direction: column;
+        max-width: 330px;
+    }
+    .activitésarticle img{
+        max-width: 330px;
+    }
+    .hébergementsarticle{
+        width: 375px;
+    }
+}
 /* **********section activités********** */
 
 /* **********Main********** */
@@ -460,6 +653,7 @@ aside article img{
 .footer{
     background-color: #F2F2F2;
     display: flex;
+    width: 100%;
 }
 
 .footer li{
@@ -503,6 +697,17 @@ aside article img{
     color: black;
 }
 
+@media all and (max-width: 1024px){
+    .footer{
+        flex-direction: column;
+    }
+    .f2{
+        margin-left: 50px;
+    }
+    .f3{
+        margin-left: 50px;
+    }
+}
 /* **********Footer********** */
 
 /* **********Body********** */
