--- a/style.css
+++ b/style.css
@@ -438,13 +438,13 @@ form button{
 
 .popuh2{
     display: flex;
+    justify-content: space-between;
     font-size: 20px;
     margin-bottom: 25px;
 }
 
 .logopopu{
     font-size: 30px;
-    padding-left: 118px;
 }
 
 aside article{
