CSS retouche fenêtre populaire

--- a/style.css
+++ b/style.css
@@ -519,6 +519,7 @@ aside article img{
         order: 1;
         min-width: 375px;
         max-width: 375px;
+        margin-left: -10%;
     }
 }
 /* **********section hébergements********** */
