--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
 html{
     overflow-x: hidden;
 }
-
 /* **********Body********** */
 
 /* **********Header********** */
@@ -145,12 +144,6 @@ main{
     padding-top: 50px;
     margin-right: 10%;
     margin-left: 10%;
-}
-
-@media all and (max-width: 1024px){
-    .main{
-        width: 375px;
-    }
 }
 /* **********section recherche********** */
 .titrerecherche h1{
@@ -324,7 +317,6 @@ form button{
         width: 290px;
     }
     .filtre{
-        flex-wrap: wrap;
         margin-bottom: 35px;
     }
 
@@ -408,7 +400,7 @@ form button{
 
 .hébergementsarticle article{
     height: 200px;
-    width: 235px;
+    min-width: 235px;
     border:solid 5px white;
     border-radius: 25px;
     background-color: white;
@@ -417,7 +409,7 @@ form button{
 }
 .hébergementsarticle article img{
     height: 115px;
-    width: 235px;
+    width: 100%;
     border-bottom: solid 5px white;
     border-right: solid 5px white;
     border-top-left-radius: 25px;
@@ -428,6 +420,7 @@ form button{
 .populaires{
     background-color: #F2F2F2;
     width: 100%;
+    height: 0%;
     max-width: 420px;
     padding-top: 40px;
     padding-left: 40px; 
@@ -479,6 +472,7 @@ aside article img{
 
 .popuarticle{
     flex-direction: column;
+    margin-left: 1%;
 }
 
 .popuarticle h3{
@@ -509,6 +503,7 @@ aside article img{
         height: 1395px;
         padding-bottom: 130px;
         max-width: 375px;
+        padding-left: 0%;
     }
 
     .hébergementsarticle{
@@ -520,6 +515,10 @@ aside article img{
         min-width: 375px;
         max-width: 375px;
         margin-left: -10%;
+    }
+
+    .populaires aside{
+        width: 100%;
     }
 }
 /* **********section hébergements********** */
@@ -650,13 +649,21 @@ aside article img{
 @media all and (max-width: 1024px){
     .activitésarticle{
         flex-direction: column;
-        max-width: 330px;
     }
     .activitésarticle img{
         max-width: 330px;
     }
     .hébergementsarticle{
         width: 375px;
+    }
+
+    .boite2 article{
+        min-width: 375px;
+    }
+
+    .boite2 img{
+        height: 115px;
+        min-width: 100%;
     }
 }
 /* **********section activités********** */
